syntax = "proto3";

package auth;

option go_package = "github.com/paw1a/grpc-media-converter/auth_service/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int64 userId = 3;
}
